# mandelbrot

./: mandel.cabal  mandel.hs
